# cai2

./: .env  .env.development  .env.example  .env.production.example  .pre-commit-config.yaml  BACKEND_FRONTEND_INTEGRATION.md  BACKEND_TASK_PROMPTS.md  DESIGN.md  FRONTEND_TASK_PROMPTS.md  GLOBE_MAP_TASK_PROMPTS.md  INTEGRATION_TASK_PROMPTS.md  MOCK_TO_BACKEND_TASK_PROMPTS.md  PROTOCOL_AUDIT.md  README.md  SYNC_REFINEMENT_TASK_PROMPTS.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.app.json
.claude/: settings.local.json
app/: __init__.py  main.py
app/core/: clock.py  config.py  errors.py  ids.py  logging.py
app/data/: __init__.py  factions_default.py  narration_templates.py
diplomacy_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: DEPENDENCY_NOTES.md  GLOBE_PERFORMANCE.md  MOCK_BOUNDARY_AUDIT.md  PERSISTENCE_PLAN.md  PROTOCOL_AUDIT.md  VISUAL_CONSISTENCY_AUDIT.md  VISUAL_REGRESSION_GLOBE.md
reports/: globe-smoke-2026-05-23T16-06-55-685Z.html  globe-smoke-2026-05-23T16-08-09-900Z.html  globe-smoke-2026-05-23T16-09-45-081Z.html  globe-smoke-2026-05-23T16-11-20-087Z.html  globe-smoke-2026-05-23T16-12-58-617Z.html  globe-smoke-2026-05-23T16-14-05-697Z.html  globe-smoke-2026-05-23T16-15-28-885Z.html  globe-smoke-2026-05-23T16-16-44-545Z.html  globe-smoke-2026-05-23T16-18-46-111Z.html  globe-smoke-2026-05-23T16-22-43-106Z.html  globe-smoke-2026-05-23T16-24-12-255Z.html  globe-smoke-2026-05-23T16-26-40-469Z.html  globe-smoke-2026-05-23T16-28-42-107Z.html  globe-smoke-2026-05-23T16-30-20-994Z.html  globe-smoke-2026-05-23T16-31-57-433Z.html  globe-smoke-2026-05-23T16-33-37-304Z.html  globe-smoke-2026-05-23T16-35-24-437Z.html  globe-smoke-2026-05-23T16-37-09-853Z.html  globe-smoke-2026-05-23T16-38-45-378Z.html  globe-smoke-2026-05-23T16-40-12-861Z.html  globe-smoke-2026-05-23T16-41-45-169Z.html  globe-smoke-2026-05-23T16-44-07-919Z.html  globe-smoke-2026-05-23T16-47-00-109Z.html  globe-smoke-2026-05-23T16-49-28-361Z.html  globe-smoke-2026-05-23T16-52-32-372Z.html
scripts/: backend-dev.ps1  backend-dev.sh  check_backend_mock_boundary.py  dev-seed-globe.py  dev-up.ps1  dev-up.sh  globe-smoke.ts  integration-smoke.py
src/app/: App.tsx  (+5 more)
(+345 files in other folders)
